
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef scalar_t__ ssize_t ;
typedef int fd_set ;
typedef int buf ;


 scalar_t__ FD_ISSET (int,int *) ;
 int FD_SET (int,int *) ;
 int FD_ZERO (int *) ;
 scalar_t__ MAX (int,int) ;
 int perror (char*) ;
 scalar_t__ read (int,char*,int) ;
 scalar_t__ select (scalar_t__,int *,int *,int *,int *) ;
 int write (int,char*,scalar_t__) ;

void shell(int p1[2], int p2[2])
{
 ssize_t n;
 fd_set rset;
 char buf[4096];

 for (;;) {
  FD_ZERO(&rset);
  FD_SET(p1[0], &rset);
  FD_SET(p2[0], &rset);

  n = select(MAX(p1[0], p2[0]) + 1,
             &rset, ((void*)0), ((void*)0), ((void*)0));
  if (n < 0) {
   perror("[-] select");
   break;
  }

  if (FD_ISSET(p1[0], &rset)) {
   n = read(p1[0], buf, sizeof(buf));
   if (n <= 0) break;
   write(p1[1], buf, n);
  }
  if (FD_ISSET(p2[0], &rset)) {
   n = read(p2[0], buf, sizeof(buf));
   if (n <= 0) break;
   write(p2[1], buf, n);
  }
 }
}
